Added GUI for blacklisted pickaxes
Parity update with Forge version 1.6.1